add annotation de swagger
